--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,198 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Systems of Linear Equations - Quiz\n", "\n", "## Introduction\n", "The following scenarios present problems that can be solved as system of equations, while performing substitutions and eliminations as you saw in the previous lesson. \n", "\n", "* Solve these problems by hand, showing all the steps to work out the unknown variable values \n", "* Verify your answers by showing the calculated values satisfy all equations\n", "\n", "## Objectives\n", "You will be able to:\n", "* Describe a system of linear equations for solving simple analytical problems\n", "* Solve a system of equations using elimination and substitution\n", "\n", "## Exercise 1\n", "Jane paid 12 dollars for 4 cups of coffee and 4 cups of tea. 3 cups of coffee cost as much as 2 cups of tea. What would be the total cost of 5 cups of coffee and 5 cups of tea?\n", "\n", "### Solution\n", "\n", "> Let $x$ be the unit price of coffee and $y$ be the unit price of tea"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your solution here \n", "# Answer: 5 cups of tea and 5 cups of coffee = 15 dollars"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 2\n", "\n", "Jim has more money than Bob. If Jim gave Bob 20 dollars, they would have the same amount. If Bob gave Jim 22 dollars, however, Jim would then have twice as much as Bob. \n", "\n", "How much does each one actually have?\n", "\n", "### Solution\n", "> Let x be the amount of money that Jim has and y be the amount that Bob has."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your solution here \n", "# Answer:\n", "# y = 106 (Bob's amount)\n", "# x = 146 (Jim's amount)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 3\n", "\n", "Mia has 30 coins, consisting of quarters (25 cents) and dimes (10 cents), which totals to the amount 5.70 dollars.  \n", "How many of each does she have?\n", "\n", "### Solution\n", "\n", "> Let x be the number of quarters and y be the number of dimes."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your solution here \n", "# Answer:\n", "# x = 18 quarters\n", "# y = 12 dimes"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Level up - Optional \n", "For more pratice with linear equations, Visit following links for more complex equations and online answers verification:\n", "\n", "* https://www.transum.org/software/SW/Starter_of_the_day/Students/Simultaneous_Equations.asp?Level=6\n", "* https://www.transum.org/software/SW/Starter_of_the_day/Students/Simultaneous_Equations.asp?Level=7\n", "\n", "## Summary\n", "In this lesson, you learned how to solve linear equations by hand to find the co-efficient values. You'll now move forward to have a deeper look into vectors and matrices and how Python and Numpy can help us solve more complex equations in an analytical context. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Systems of Linear Equations - Quiz\n",
+    "\n",
+    "## Introduction\n",
+    "The following scenarios present problems that can be solved as system of equations, while performing substitutions and eliminations as you saw in the previous lesson. \n",
+    "\n",
+    "* Solve these problems by hand, showing all the steps to work out the unknown variable values \n",
+    "* Verify your answers by showing the calculated values satisfy all equations\n",
+    "\n",
+    "## Objectives\n",
+    "You will be able to:\n",
+    "* Describe a system of linear equations for solving simple analytical problems\n",
+    "* Solve a system of equations using elimination and substitution\n",
+    "\n",
+    "## Exercise 1\n",
+    "Jane paid 12 dollars for 4 cups of coffee and 4 cups of tea. 3 cups of coffee cost as much as 2 cups of tea. What would be the total cost of 5 cups of coffee and 5 cups of tea?\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "> Let $x$ be the unit price of coffee and $y$ be the unit price of tea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution here \n",
+    "\n",
+    "'''\n",
+    "A) 4x + 4y = 12\n",
+    "B) 3x -2y = 0\n",
+    "\n",
+    "\n",
+    "from A:\n",
+    "\n",
+    "x + y = 3\n",
+    "x = 3 - y\n",
+    "\n",
+    "plug into B:\n",
+    "\n",
+    "3(3 - y) - 2y = 0\n",
+    "9 - 3y - 2y = 0\n",
+    "-5y = -9\n",
+    "\n",
+    "y = 9/5 = 1.8\n",
+    "\n",
+    "plug into A to solve for x:\n",
+    "\n",
+    "4x + 4(9/5) = 12\n",
+    "4x = 12 - 7.2\n",
+    "x = 1.2\n",
+    "\n",
+    "Check:\n",
+    "5(1.2) + 5(1.8) = 15\n",
+    "'''\n",
+    "\n",
+    " \n",
+    "# Answer: 5 cups of tea and 5 cups of coffee = 15 dollars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "Jim has more money than Bob. If Jim gave Bob 20 dollars, they would have the same amount. If Bob gave Jim 22 dollars, however, Jim would then have twice as much as Bob. \n",
+    "\n",
+    "How much does each one actually have?\n",
+    "\n",
+    "### Solution\n",
+    "> Let x be the amount of money that Jim has and y be the amount that Bob has."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution here \n",
+    "'''\n",
+    "j > b\n",
+    "j - 20 = b + 20\n",
+    "j + 22 = 2(b - 22)\n",
+    "\n",
+    "-2j + 40 = -2b - 40\n",
+    "j + 22 = 2b - 44\n",
+    "\n",
+    "-j + 62 = -84\n",
+    "j = 146\n",
+    "\n",
+    "146 - 20 = b + 20\n",
+    "b = 106\n",
+    "\n",
+    "'''\n",
+    "# Answer:\n",
+    "# b = 106 (Bob's amount)\n",
+    "# j = 146 (Jim's amount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "\n",
+    "Mia has 30 coins, consisting of quarters (25 cents) and dimes (10 cents), which totals to the amount 5.70 dollars.  \n",
+    "How many of each does she have?\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "> Let x be the number of quarters and y be the number of dimes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution here \n",
+    "'''\n",
+    "x + y = 30\n",
+    ".25x + .1y = 5.70\n",
+    "\n",
+    "x + y = 30\n",
+    "-x - .4y = -22.8\n",
+    "\n",
+    ".6y = 7.2\n",
+    "y = 12\n",
+    "\n",
+    "x + 12 = 30\n",
+    "x = 18\n",
+    "\n",
+    "'''\n",
+    "# Answer:\n",
+    "# x = 18 quarters\n",
+    "# y = 12 dimes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Level up - Optional \n",
+    "For more pratice with linear equations, Visit following links for more complex equations and online answers verification:\n",
+    "\n",
+    "* https://www.transum.org/software/SW/Starter_of_the_day/Students/Simultaneous_Equations.asp?Level=6\n",
+    "* https://www.transum.org/software/SW/Starter_of_the_day/Students/Simultaneous_Equations.asp?Level=7\n",
+    "\n",
+    "## Summary\n",
+    "In this lesson, you learned how to solve linear equations by hand to find the co-efficient values. You'll now move forward to have a deeper look into vectors and matrices and how Python and Numpy can help us solve more complex equations in an analytical context. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
